<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.adasplus.activate.activity.FillTerminalInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/system_navigation_bar_color">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_10"
            android:src="@drawable/icon_back"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_10"
            android:textSize="@dimen/sp_18"
            android:text="@string/fill_terminal_info"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10">

            <TextView
                style="@style/RequiredFlag"
                android:text="@string/required_flag" />

            <TextView
                style="@style/TvActivateText"
                android:text="@string/phone_number" />

            <EditText
                android:id="@+id/et_platform_phone_number"
                style="@style/EtInputText"
                android:layout_marginStart="@dimen/dp_22"
                android:hint="@string/please_enter" />
        </LinearLayout>

        <View style="@style/UnderLineStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10">

            <TextView
                style="@style/TvActivateText"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/license_plate_number" />

            <EditText
                android:id="@+id/et_license_plate_number"
                style="@style/EtInputText"
                android:layout_marginStart="@dimen/dp_22"
                android:hint="@string/please_enter"
                />
        </LinearLayout>

        <View style="@style/UnderLineStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10">

            <TextView
                style="@style/TvActivateText"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/chassis_number" />

            <EditText
                android:id="@+id/et_chassis_number"
                style="@style/EtInputText"
                android:layout_marginStart="@dimen/dp_22"
                android:hint="@string/please_enter"
                />
        </LinearLayout>

        <View style="@style/UnderLineStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10">

            <TextView
                style="@style/TvActivateText"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/license_plate_color" />

            <TextView
                android:id="@+id/tv_license_plate_color"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:hint="@string/please_select"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <View style="@style/UnderLineStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10">

            <TextView
                style="@style/TvActivateText"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/terminal_id" />

            <EditText
                android:id="@+id/et_terminal_id"
                style="@style/EtInputText"
                android:layout_marginStart="@dimen/dp_22"
                android:hint="@string/please_enter"
                android:inputType="text" />
        </LinearLayout>

        <View style="@style/UnderLineStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10">

            <TextView
                style="@style/TvActivateText"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/provincial_domain_id" />

            <TextView
                android:id="@+id/tv_provincial_domain_id"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:hint="@string/please_select"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <View style="@style/UnderLineStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10">

            <TextView
                style="@style/TvActivateText"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/city_and_county_id" />

            <TextView
                android:id="@+id/tv_city_and_county_id"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:hint="@string/please_select"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <View style="@style/UnderLineStyle" />

        <TextView
            android:id="@+id/tv_save_terminal_info"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@drawable/btn_shape_style"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>