<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_background"
    tools:context=".activity.CarInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_car_back"
            style="@style/CommonTitleImageBackStyle" />

        <TextView
            style="@style/CommonTitleTvStyle"
            android:text="@string/car_info" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/ll_car_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">
            <LinearLayout style="@style/LinearLayoutDisplayDataStyle">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:layout_marginStart="@dimen/dp_2"
                    android:textColor="@color/font_color_333"
                    android:textSize="@dimen/sp_14" />
                <TextView
                    android:id="@+id/tv_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/font_color_666"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <View style="@style/UnderLineStyle"/>

            <LinearLayout style="@style/LinearLayoutDisplayDataStyle">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/license_plate_number"
                    android:layout_marginStart="@dimen/dp_2"
                    android:textColor="@color/font_color_333"
                    android:textSize="@dimen/sp_14" />
                <TextView
                    android:id="@+id/tv_license_plate_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/font_color_666"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <View style="@style/UnderLineStyle"/>

            <LinearLayout style="@style/LinearLayoutDisplayDataStyle">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/chassis_number"
                    android:layout_marginStart="@dimen/dp_2"
                    android:textColor="@color/font_color_333"
                    android:textSize="@dimen/sp_14" />
                <TextView
                    android:id="@+id/tv_chassis_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/font_color_666"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <View style="@style/UnderLineStyle"/>

            <LinearLayout style="@style/LinearLayoutDisplayDataStyle">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/license_plate_color"
                    android:layout_marginStart="@dimen/dp_2"
                    android:textColor="@color/font_color_333"
                    android:textSize="@dimen/sp_14" />
                <TextView
                    android:id="@+id/tv_license_plate_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/font_color_666"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <View style="@style/UnderLineStyle"/>

            <LinearLayout style="@style/LinearLayoutDisplayDataStyle">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/terminal_id"
                    android:layout_marginStart="@dimen/dp_2"
                    android:textColor="@color/font_color_333"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/tv_terminal_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/font_color_666"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <View style="@style/UnderLineStyle"/>

            <LinearLayout style="@style/LinearLayoutDisplayDataStyle">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/provincial_domain_id"
                    android:layout_marginStart="@dimen/dp_2"
                    android:textColor="@color/font_color_333"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/tv_provincial_domain_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/font_color_666"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <View style="@style/UnderLineStyle"/>

            <LinearLayout style="@style/LinearLayoutDisplayDataStyle">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/city_and_county_id"
                    android:layout_marginStart="@dimen/dp_2"
                    android:textColor="@color/font_color_333"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/tv_city_and_county_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/font_color_666"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:drawableTop="@drawable/no_car_indor"
            android:id="@+id/tv_no_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_car_infor"
            android:paddingTop="@dimen/dp_200"
            android:textSize="@dimen/sp_18"
            android:background="@color/app_background"
            android:textColor="@color/font_color_666"
            android:visibility="gone"/>
    </RelativeLayout>


</LinearLayout>